--- a/src/app/shared/components/match-card/match-card.component.scss
+++ b/src/app/shared/components/match-card/match-card.component.scss
@@ -112,7 +112,7 @@
   }
 
   &.result-loss {
-    color: var(--color-primary);
+    color: var(--color-primary-text);
   }
 }
 
